// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`errors if describe returns a Promise 1`] = `
"    Returning a Promise from "describe" is not supported. Tests must be defined synchronously.

       9 | 'use strict';
      10 |
    > 11 | describe('Promise describe errors', () => {
         | ^
      12 |   it('t', () => {});
      13 |   return Promise.resolve();
      14 | });

      at Object.describe (__tests__/describeReturnPromise.test.js:11:1)"
`;

exports[`errors if describe returns something 1`] = `
"    A "describe" callback must not return a value.

       9 | 'use strict';
      10 |
    > 11 | describe('describe return errors', () => {
         | ^
      12 |   it('t', () => {});
      13 |   return 42;
      14 | });

      at Object.describe (__tests__/describeReturnSomething.test.js:11:1)"
`;
